[GOHW-3]: add pagination for postgres
